# StupidChess

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  InterfaceSpec.md  README.md  prompt.md  vcpkg.json
clients/miniapp/: README.md
clients/ue/: BlueprintQuickStart.md  McpBlueprintWorkflow.md  README.md
clients/ue/StupidChessUE/: StupidChessUE.uproject
clients/ue/StupidChessUE/Config/: DefaultEngine.ini  DefaultGame.ini
clients/ue/StupidChessUE/Content/: WBP_LocalMatchDebug.uasset
clients/ue/StupidChessUE/Source/: StupidChessUE.Target.cs  StupidChessUEEditor.Target.cs
clients/ue/StupidChessUE/Source/StupidChessCoreBridge/: StupidChessCoreBridge.Build.cs
clients/ue/StupidChessUE/Source/StupidChessCoreBridge/Private/: StupidChessCoreBridgeModule.cpp  StupidChessLocalMatchSubsystem.cpp  StupidChessSharedCodeCompilation.cpp
clients/ue/StupidChessUE/Source/StupidChessCoreBridge/Private/Tests/: StupidChessLocalMatchSubsystemTests.cpp
clients/ue/StupidChessUE/Source/StupidChessCoreBridge/Public/: StupidChessCoreBridgeModule.h  StupidChessLocalMatchSubsystem.h
clients/ue/StupidChessUE/Source/StupidChessUE/: StupidChessUE.Build.cs  StupidChessUE.cpp
core/: CMakeLists.txt  README.md
core/include/CoreRules/: CoreTypes.h  MatchReferee.h
core/src/: MatchReferee.cpp
docs/: Architecture.md  CommitConvention.md  DependencyPolicy.md  InterfaceSpec.md  Progress.md  Requirements.md  RuleSpec.md
docs/ADR/: 0001-Repo-Strategy.md  0002-Sequence-Sync.md
protocol/: CMakeLists.txt  README.md
protocol/include/Protocol/: ProtocolCodec.h  ProtocolTypes.h
protocol/src/: ProtocolCodec.cpp  ProtocolTypes.cpp
server/: CMakeLists.txt  README.md
server/include/Server/: MatchService.h  MatchSession.h  ProtocolMapper.h  ServerGateway.h  TransportAdapter.h
server/src/: MatchService.cpp  MatchSession.cpp  ProtocolMapper.cpp  ServerGateway.cpp  TransportAdapter.cpp  main.cpp
tests/: CMakeLists.txt  CoreSmokeTests.cpp  MatchServiceTests.cpp  MatchSessionTests.cpp  ProtocolCodecTests.cpp  ProtocolMapperTests.cpp  ServerGatewayTests.cpp  TransportAdapterTests.cpp
tools/: README.md  reset_local_match_widget_graph.py  sync_unreal_mcp.ps1  wire_local_match_widget_graph.py
